
2009-08-01
Initial project in ajcodekatas
Database, w/initial tests
Schema, w/initial tests
Table, w/initial tests
Column, w/initial tests

2009-08-02
Column.AddRow w/tests
Table.ApplyFilter w/tests
IRowFilter
IsNullFilter
AreEqualsFilter

2009-08-11
AjBase.Sql
Lexer, Parser with Tests
ICommand
CreateDatabaseCommand
CreateTableCommand

2009-08-12
InsertCommand
Parser support for simple insert without column names