@@ -23,3 +23,5 @@ CreateTableCommand
 2009-08-12
 InsertCommand
 Parser support for simple insert without column names
+Parser support for insert with names and values
+insert execution tests
